created login aand signup page

--- a/reactapp/public/index.html
+++ b/reactapp/public/index.html
@@ -34,6 +34,7 @@
 
     <title>Instrument Delight</title>
   </head>
+  <!-- <body style="background-color: #272B30;"> -->
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
